--- a/Opdracht_1.html
+++ b/Opdracht_1.html
@@ -15442,7 +15442,7 @@ Nulwaarden BMI: 11
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Om de relaties tussen de kolommen beter duidelijk te maken word er hieronder gebruik gemaakt van verschillende visualisaties. Voor deze visualisaties zijn verschillende functies gemaakt.</p>
+<p>Om de relaties tussen de kolommen beter duidelijk te maken wordt er hieronder gebruik gemaakt van verschillende visualisaties. Voor deze visualisaties zijn verschillende functies gemaakt.</p>
 
 </div>
 </div>
