Ingeleverd en aangepast

--- a/Opdracht_1.html
+++ b/Opdracht_1.html
@@ -14586,33 +14586,33 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li>Declan van den Hoek</li>
 <li>Isa Dijkstra</li>
 </ul>
-<p>In dit notebook worden er, aan de hand van een train dataset, verschillende Machine Learning modellen opgesteld om de meest accurate manier te vinden om diabetes te voorspellen.</p>
+<p>In dit notebook worden er, aan de hand van een train dataset, verschillende Machine Learning modellen opgesteld om de meest accurate manier te vinden om diabetes te voorspellen. Voor het project hebben we gewerkt in <a href="https://github.com/BJHeemskerk/MachineLearning">GitHub</a>, om makkelijk de bestanden te delen.</p>
 <h2 id="Inhoudsopgave-"><strong><em>Inhoudsopgave</em></strong> <a name="begin" /><a class="anchor-link" href="#Inhoudsopgave-">&#182;</a></h2><ol>
 <li><a href="#h1">H1: Explorative Data Analysis</a><ol>
-<li><a href="#h1.1">Relaties tussen kolommen</a></li>
-<li><a href="#h1.2">Standaardisatie</a></li>
+<li><a href="#h1.1">H1.1: Relaties tussen kolommen</a></li>
+<li><a href="#h1.2">H1.2: Standaardisatie</a></li>
 </ol>
 </li>
 <li><a href="#h2">H2: Machine Learning en Metrics</a><ol>
-<li><a href="#h2.1">De vorm van Machine Learning</a></li>
-<li><a href="#h2.2">Welke metric</a></li>
+<li><a href="#h2.1">H2.1: De vorm van Machine Learning</a></li>
+<li><a href="#h2.2">H2.2: Welke metric</a></li>
 </ol>
 </li>
 <li><a href="#h3">H3: Modelleren</a><ol>
-<li><a href="#h3.1">Logistische Regressie</a></li>
-<li><a href="#h3.2">Decision Tree</a></li>
-<li><a href="#h3.3">Random Forest</a></li>
-<li><a href="#h3.4">ADA Boosting</a></li>
-<li><a href="#h3.5">Gradient Boosting</a></li>
-<li><a href="#h3.6">Support Vector Machines</a></li>
-<li><a href="#h3.7">Naive Bayes</a></li>
-<li><a href="#h3.8">Ensemble</a></li>
+<li><a href="#h3.1">H3.1: Logistische Regressie</a></li>
+<li><a href="#h3.2">H3.2: Decision Tree</a></li>
+<li><a href="#h3.3">H3.3: Random Forest</a></li>
+<li><a href="#h3.4">H3.4: ADA Boosting</a></li>
+<li><a href="#h3.5">H3.5: Gradient Boosting</a></li>
+<li><a href="#h3.6">H3.6: Support Vector Machines</a></li>
+<li><a href="#h3.7">H3.7: Naive Bayes</a></li>
+<li><a href="#h3.8">H3.8: Ensemble</a></li>
 </ol>
 </li>
 <li><a href="#h4">H4: Bevindingen</a></li>
 <li><a href="#h5">H5: Conclusie &amp; Aanbevelingen</a><ol>
-<li><a href="#h5.1">Feature Importances</a></li>
-<li><a href="#5.2">Advies aan de Arts</a></li>
+<li><a href="#h5.1">H5.1: Feature Importances</a></li>
+<li><a href="#h5.2">H5.2: Advies aan de Arts</a></li>
 </ol>
 </li>
 <li><a href="#literatuur">Literatuurlijst</a></li>
