--- a/Diabetes/Opdracht_1.html
+++ b/Diabetes/Opdracht_1.html
@@ -14580,12 +14580,26 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Voorspellen-van-Diabetes"><strong><em>Voorspellen van Diabetes</em></strong><a class="anchor-link" href="#Voorspellen-van-Diabetes">&#182;</a></h1><p>Teamleden:</p>
-<ul>
-<li>Busse Heemskerk</li>
-<li>Declan van den Hoek</li>
-<li>Isa Dijkstra</li>
-</ul>
+<h1 id="Voorspellen-van-Diabetes"><strong><em>Voorspellen van Diabetes</em></strong><a class="anchor-link" href="#Voorspellen-van-Diabetes">&#182;</a></h1><table>
+<thead><tr>
+<th>Teamleden</th>
+<th>Kaggle Username</th>
+<th>GitHub Username</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Busse Heemskerk</td>
+<td>bussejheemskerk</td>
+<td>BJHeemskerk</td>
+</tr>
+<tr>
+<td>Isa Dijkstra</td>
+<td>isadijkstra</td>
+<td>IsaD01</td>
+</tr>
+</tbody>
+</table>
 <p>In dit notebook worden er, aan de hand van een train dataset, verschillende Machine Learning modellen opgesteld om de meest accurate manier te vinden om diabetes te voorspellen. Voor het project hebben we gewerkt in <a href="https://github.com/BJHeemskerk/MachineLearning">GitHub</a>, om makkelijk de bestanden te delen.</p>
 <h2 id="Inhoudsopgave-"><strong><em>Inhoudsopgave</em></strong> <a name="begin" /><a class="anchor-link" href="#Inhoudsopgave-">&#182;</a></h2><ol>
 <li><a href="#h1">H1: Explorative Data Analysis</a><ol>
